# DynFilter3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  ruff.toml
cpp/dynfilter3d/: CMakeLists.txt  bindings.cpp
cpp/dynfilter3d/include/dynfilter3d/: filter_engine.hpp  params.hpp  result.hpp  types.hpp
src/dynfilter3d/: __init__.py
